tests/paczka1/small_fuzzy/72512163.err
Error in line 5: sqyRpSvwX S976 94,6
Error in line 8: sqyRpSvwX A16y 74,6
Error in line 6: sqyRpSvwX A168 39,9
